[#149] Fix up backend repository with linting (#150)
